feat: 顶部开关国际化

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -2,5 +2,17 @@
   "mo-shi": "Mode",
   "shou-dong": "Manual",
   "zi-zhu": "Autonomous",
-  "mo-ban": "Template"
+  "mo-ban": "Template",
+  "ting-zhi": "Stop",
+  "bao-cun": "Save",
+  "ding-shi-ren-wu": "Scheduled tasks",
+  "hou-deng": "Rear light",
+  "ji-guang-fa-san-qi": "Laser diffuser",
+  "lu-jing-gui-hua": "Route Planning",
+  "qian-deng": "Head light",
+  "qu-xiao": "Cancel",
+  "sou-suo": "Search",
+  "xia-fa": "Issue",
+  "xin-jian": "Newly Built.",
+  "yu-yin": "Voice"
 }
