--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -2,5 +2,17 @@
   "mo-shi": "Mode",
   "shou-dong": "manuel",
   "zi-zhu": "Autonomie",
-  "mo-ban": "Modèle"
+  "mo-ban": "Modèle",
+  "ting-zhi": "Arrêtez",
+  "bao-cun": "sauvegarder",
+  "ding-shi-ren-wu": "Tâche planifiée",
+  "hou-deng": "Feux arrière",
+  "ji-guang-fa-san-qi": "Divergent de laser",
+  "lu-jing-gui-hua": "Planification d'itinéraire",
+  "qian-deng": "Phare avant",
+  "qu-xiao": "Annuler",
+  "sou-suo": "recherche",
+  "xia-fa": "Émettre",
+  "xin-jian": "Nouvelle construction",
+  "yu-yin": "Voix"
 }
