feat: 地图相关国际化

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -14,5 +14,14 @@
   "sou-suo": "Search",
   "xia-fa": "Issue",
   "xin-jian": "Newly Built.",
-  "yu-yin": "Voice"
+  "yu-yin": "Voice",
+  "jie-shu": "End.",
+  "fan-hang": "Return",
+  "kai-shi": "begin/start",
+  "qing-kong": "empty",
+  "shan-chu": "Delete",
+  "tiao-shi": "Debugging",
+  "xian-xin-jian-fan-hang-lu-jing": "First, create a return path.",
+  "xian-xin-jian-lu-jing": "Create a new path first.",
+  "zheng-chang": "Normal."
 }
