--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -14,5 +14,14 @@
   "sou-suo": "recherche",
   "xia-fa": "Émettre",
   "xin-jian": "Nouvelle construction",
-  "yu-yin": "Voix"
+  "yu-yin": "Voix",
+  "jie-shu": "Fin.",
+  "fan-hang": "Retourner au port",
+  "kai-shi": "commencer",
+  "qing-kong": "Vider",
+  "shan-chu": "Supprimer",
+  "tiao-shi": "Déboguer",
+  "xian-xin-jian-fan-hang-lu-jing": "Créer d'abord une trajectoire de retour.",
+  "xian-xin-jian-lu-jing": "Créer d'abord un nouveau chemin.",
+  "zheng-chang": "Normal"
 }
