--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -14,5 +14,14 @@
   "hou-deng": "后灯",
   "yu-yin": "语音",
   "ting-zhi": "停止",
-  "ji-guang-fa-san-qi": "激光发散器"
+  "ji-guang-fa-san-qi": "激光发散器",
+  "qing-kong": "清空",
+  "fan-hang": "返航",
+  "kai-shi": "开始",
+  "jie-shu": "结束",
+  "xian-xin-jian-lu-jing": "先新建路径",
+  "xian-xin-jian-fan-hang-lu-jing": "先新建返航路径",
+  "shan-chu": "删除",
+  "tiao-shi": "调试",
+  "zheng-chang": "正常"
 }
