--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -23,5 +23,65 @@
   "tiao-shi": "Debugging",
   "xian-xin-jian-fan-hang-lu-jing": "First, create a return path.",
   "xian-xin-jian-lu-jing": "Create a new path first.",
-  "zheng-chang": "Normal."
+  "zheng-chang": "Normal.",
+  "xuan-ze-che-liang": "Select a car.",
+  "pei-zhi-jian-kong": "Configure monitoring.",
+  "wei-xuan-ze-che-liang": "No vehicle selected.",
+  "chui-zhi-jiao-du": "Vertical angle",
+  "di-pan": "Chassis",
+  "dian-liang": "Battery level",
+  "fan-hui": "return",
+  "hou-tui": "retreat",
+  "huo-yan": "Flame",
+  "jia-wan": "Methane",
+  "jie-suo": "Unlock",
+  "kong-zhi-qi": "Controller",
+  "liu-hua-qing": "Hydrogen sulfide",
+  "qian-jin": "advance",
+  "qu-niao": "Bird repellent",
+  "qu-niao-qi-kong-zhi": "Bird Repeller Control",
+  "qu-ren": "Drive away",
+  "quan-ping-hua-mian-qie-huan": "Fullscreen screen switching",
+  "she-zhi-ying-she": "Set mapping",
+  "shi-du": "humidity",
+  "shi-neng": "Enable",
+  "shi-neng-0": "Disability",
+  "shui-ping-jiao-du": "horizontal angle",
+  "su-du": "speed",
+  "suo-ding": "Locking",
+  "tong-zhi": "Notification",
+  "websocket-lian-jie-yi-duan-kai": "WebSocket connection has been disconnected.",
+  "wei-zhi": "Unknown",
+  "wen-du": "Temperature",
+  "wu-huo-yan": "No flame.",
+  "wu-yan-wu": "Smoke-free",
+  "yan-wu": "smoke",
+  "yi-yang-hua-tan": "Carbon monoxide",
+  "yin-liang": "Volume",
+  "you-huo-yan": "There is a flame.",
+  "you-yan-wu": "There is smoke.",
+  "yun-tai-kong-zhi": "Pan-tilt control",
+  "zan-ting": "Pause",
+  "zao-yin": "Noise",
+  "zhuan-xiang": "turn",
+  "fang-xiang-pan": "Steering wheel",
+  "kong-zhi-qi-ying-she": "Controller Mapping",
+  "shou-bing": "game controller",
+  "yao-gan": "Joystick",
+  "bian-ji": "editor",
+  "cao-zuo": "Operation",
+  "guan-lian": "associated",
+  "guan-lian-zhuang-tai": "Related state",
+  "la-liu-di-zhi": "Streaming URL.",
+  "ming-cheng": "Name",
+  "qing-shu-ru-ming-cheng": "Please enter the name.",
+  "qu-xiao-guan-lian": "Cancel association",
+  "que-ding": "确定: \n\nEnglish Translation: \nDetermine/Confirm.",
+  "she-bei-bian-hao": "Device number",
+  "she-xiang-tou-ming-cheng": "Camera Name",
+  "tian-jia": "Add/Adding.",
+  "wai-she-lei-xing": "Peripheral type",
+  "wai-she-ming-cheng": "Peripheral name",
+  "wai-she-zhuang-tai": "Peripheral status",
+  "yi-guan-lian": "already associated"
 }
