--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -23,5 +23,65 @@
   "tiao-shi": "Déboguer",
   "xian-xin-jian-fan-hang-lu-jing": "Créer d'abord une trajectoire de retour.",
   "xian-xin-jian-lu-jing": "Créer d'abord un nouveau chemin.",
-  "zheng-chang": "Normal"
+  "zheng-chang": "Normal",
+  "xuan-ze-che-liang": "Choisir un véhicule",
+  "pei-zhi-jian-kong": "Configurer la surveillance",
+  "wei-xuan-ze-che-liang": "Aucun véhicule sélectionné.",
+  "chui-zhi-jiao-du": "angle vertical",
+  "di-pan": "Châssis",
+  "dian-liang": "Niveau de batterie",
+  "fan-hui": "Retourner",
+  "hou-tui": "Reculer",
+  "huo-yan": "Flamme",
+  "jia-wan": "Méthane",
+  "jie-suo": "Déverrouiller",
+  "kong-zhi-qi": "Contrôleur",
+  "liu-hua-qing": "Hydrogène sulfuré",
+  "qian-jin": "Avancer",
+  "qu-niao": "Chasser les oiseaux",
+  "qu-niao-qi-kong-zhi": "Contrôle de l'épouvantail",
+  "qu-ren": "irritant",
+  "quan-ping-hua-mian-qie-huan": "Changement d'écran en plein écran",
+  "she-zhi-ying-she": "Configurer la correspondance",
+  "shi-du": "Humidité",
+  "shi-neng": "activer",
+  "shi-neng-0": "Incapacité",
+  "shui-ping-jiao-du": "l'angle horizontal",
+  "su-du": "vitesse",
+  "suo-ding": "Verrouiller",
+  "tong-zhi": "Notification",
+  "websocket-lian-jie-yi-duan-kai": "La connexion websocket est interrompue.",
+  "wei-zhi": "inconnu",
+  "wen-du": "Température",
+  "wu-huo-yan": "Pas de flamme.",
+  "wu-yan-wu": "Sans fumée",
+  "yan-wu": "Fumée",
+  "yi-yang-hua-tan": "Le monoxyde de carbone",
+  "yin-liang": "Volume",
+  "you-huo-yan": "Il y a des flammes.",
+  "you-yan-wu": "Il y a de la fumée.",
+  "yun-tai-kong-zhi": "Contrôle de la plateforme de caméra.",
+  "zan-ting": "Pause",
+  "zao-yin": "bruit",
+  "zhuan-xiang": "tourner",
+  "fang-xiang-pan": "Volant",
+  "kong-zhi-qi-ying-she": "Mapping du contrôleur",
+  "shou-bing": "Manette",
+  "yao-gan": "Manette de contrôle à distance",
+  "bian-ji": "Éditer",
+  "cao-zuo": "Opération",
+  "guan-lian": "associé",
+  "guan-lian-zhuang-tai": "Statut de liaison",
+  "la-liu-di-zhi": "Adresse de diffusion en continu",
+  "ming-cheng": "Nom",
+  "qing-shu-ru-ming-cheng": "Veuillez saisir un nom.",
+  "qu-xiao-guan-lian": "Dissocier",
+  "que-ding": "Déterminer",
+  "she-bei-bian-hao": "Numéro d'équipement",
+  "she-xiang-tou-ming-cheng": "Nom de la caméra.",
+  "tian-jia": "Ajouter",
+  "wai-she-lei-xing": "Types de périphériques externes",
+  "wai-she-ming-cheng": "Nom du périphérique",
+  "wai-she-zhuang-tai": "État des périphériques",
+  "yi-guan-lian": "Déjà lié."
 }
