--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -23,5 +23,65 @@
   "xian-xin-jian-fan-hang-lu-jing": "先新建返航路径",
   "shan-chu": "删除",
   "tiao-shi": "调试",
-  "zheng-chang": "正常"
+  "zheng-chang": "正常",
+  "xuan-ze-che-liang": "选择车辆",
+  "pei-zhi-jian-kong": "配置监控",
+  "wei-xuan-ze-che-liang": "未选择车辆",
+  "quan-ping-hua-mian-qie-huan": "全屏画面切换",
+  "fan-hui": "返回",
+  "qu-niao": "驱鸟",
+  "qu-ren": "驱人",
+  "zan-ting": "暂停",
+  "shi-neng": "使能",
+  "shi-neng-0": "失能",
+  "qu-niao-qi-kong-zhi": "驱鸟器控制",
+  "yin-liang": "音量",
+  "yun-tai-kong-zhi": "云台控制",
+  "shui-ping-jiao-du": "水平角度",
+  "chui-zhi-jiao-du": "垂直角度",
+  "tong-zhi": "通知",
+  "websocket-lian-jie-yi-duan-kai": "websocket 连接已断开",
+  "wei-zhi": "未知",
+  "jie-suo": "解锁",
+  "suo-ding": "锁定",
+  "di-pan": "底盘",
+  "kong-zhi-qi": "控制器",
+  "su-du": "速度",
+  "qian-jin": "前进",
+  "hou-tui": "后退",
+  "zhuan-xiang": "转向",
+  "dian-liang": "电量",
+  "wen-du": "温度",
+  "shi-du": "湿度",
+  "huo-yan": "火焰",
+  "you-huo-yan": "有火焰",
+  "wu-huo-yan": "无火焰",
+  "zao-yin": "噪音",
+  "yan-wu": "烟雾",
+  "you-yan-wu": "有烟雾",
+  "wu-yan-wu": "无烟雾",
+  "liu-hua-qing": "硫化氢",
+  "jia-wan": "甲烷",
+  "yi-yang-hua-tan": "一氧化碳",
+  "she-zhi-ying-she": "设置映射",
+  "kong-zhi-qi-ying-she": "控制器映射",
+  "yao-gan": "遥杆",
+  "shou-bing": "手柄",
+  "fang-xiang-pan": "方向盘",
+  "she-xiang-tou-ming-cheng": "摄像头名称",
+  "la-liu-di-zhi": "拉流地址",
+  "guan-lian-zhuang-tai": "关联状态",
+  "cao-zuo": "操作",
+  "bian-ji": "编辑",
+  "qu-xiao-guan-lian": "取消关联",
+  "guan-lian": "关联",
+  "she-bei-bian-hao": "设备编号",
+  "wai-she-ming-cheng": "外设名称",
+  "wai-she-lei-xing": "外设类型",
+  "wai-she-zhuang-tai": "外设状态",
+  "qing-shu-ru-ming-cheng": "请输入名称",
+  "ming-cheng": "名称",
+  "tian-jia": "添加",
+  "que-ding": "确定",
+  "yi-guan-lian": "已关联"
 }
