--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -13,20 +13,20 @@
   "qu-xiao": "Cancel",
   "sou-suo": "Search",
   "xia-fa": "Issue",
-  "xin-jian": "Newly Built.",
+  "xin-jian": "Create",
   "yu-yin": "Voice",
   "jie-shu": "End.",
   "fan-hang": "Return",
   "kai-shi": "begin/start",
-  "qing-kong": "empty",
+  "qing-kong": "Clear",
   "shan-chu": "Delete",
   "tiao-shi": "Debugging",
   "xian-xin-jian-fan-hang-lu-jing": "First, create a return path.",
   "xian-xin-jian-lu-jing": "Create a new path first.",
-  "zheng-chang": "Normal.",
+  "zheng-chang": "Normal",
   "xuan-ze-che-liang": "Select a car.",
-  "pei-zhi-jian-kong": "Configure monitoring.",
-  "wei-xuan-ze-che-liang": "No vehicle selected.",
+  "pei-zhi-jian-kong": "Configure monitoring",
+  "wei-xuan-ze-che-liang": "No vehicle selected",
   "chui-zhi-jiao-du": "Vertical angle",
   "di-pan": "Chassis",
   "dian-liang": "Battery level",
@@ -53,7 +53,7 @@
   "websocket-lian-jie-yi-duan-kai": "WebSocket connection has been disconnected.",
   "wei-zhi": "Unknown",
   "wen-du": "Temperature",
-  "wu-huo-yan": "No flame.",
+  "wu-huo-yan": "No flame",
   "wu-yan-wu": "Smoke-free",
   "yan-wu": "smoke",
   "yi-yang-hua-tan": "Carbon monoxide",
@@ -76,12 +76,19 @@
   "ming-cheng": "Name",
   "qing-shu-ru-ming-cheng": "Please enter the name.",
   "qu-xiao-guan-lian": "Cancel association",
-  "que-ding": "确定: \n\nEnglish Translation: \nDetermine/Confirm.",
+  "que-ding": "Confirm",
   "she-bei-bian-hao": "Device number",
   "she-xiang-tou-ming-cheng": "Camera Name",
   "tian-jia": "Add/Adding.",
   "wai-she-lei-xing": "Peripheral type",
   "wai-she-ming-cheng": "Peripheral name",
   "wai-she-zhuang-tai": "Peripheral status",
-  "yi-guan-lian": "already associated"
+  "yi-guan-lian": "already associated",
+  "deng-lu": "Login",
+  "ji-zhu-mi-ma": "Remember password.",
+  "mi-ma": "Password.",
+  "mi-ma-bu-neng-wei-kong": "Password cannot be empty.",
+  "wei-jie-che": "Surveillance car.",
+  "yong-hu-ming-bu-neng-wei-kong": "The username cannot be empty.",
+  "zhang-hao": "account"
 }
