--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -83,5 +83,12 @@
   "wai-she-lei-xing": "Types de périphériques externes",
   "wai-she-ming-cheng": "Nom du périphérique",
   "wai-she-zhuang-tai": "État des périphériques",
-  "yi-guan-lian": "Déjà lié."
+  "yi-guan-lian": "Déjà lié.",
+  "deng-lu": "Connexion",
+  "ji-zhu-mi-ma": "Se souvenir du mot de passe",
+  "mi-ma": "Mot de passe",
+  "mi-ma-bu-neng-wei-kong": "Le mot de passe ne peut pas être vide",
+  "wei-jie-che": "Voiture de course hors-piste.",
+  "yong-hu-ming-bu-neng-wei-kong": "Le nom d'utilisateur ne peut pas être vide.",
+  "zhang-hao": "compte"
 }
