refactor: 国际化完善

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -26,7 +26,7 @@
   "zheng-chang": "Normal",
   "xuan-ze-che-liang": "Choisir un véhicule",
   "pei-zhi-jian-kong": "Configurer la surveillance",
-  "wei-xuan-ze-che-liang": "Aucun véhicule sélectionné.",
+  "wei-xuan-ze-che-liang": "Aucun véhicule sélectionné",
   "chui-zhi-jiao-du": "angle vertical",
   "di-pan": "Châssis",
   "dian-liang": "Niveau de batterie",
@@ -53,7 +53,7 @@
   "websocket-lian-jie-yi-duan-kai": "La connexion websocket est interrompue.",
   "wei-zhi": "inconnu",
   "wen-du": "Température",
-  "wu-huo-yan": "Pas de flamme.",
+  "wu-huo-yan": "Pas de flamme",
   "wu-yan-wu": "Sans fumée",
   "yan-wu": "Fumée",
   "yi-yang-hua-tan": "Le monoxyde de carbone",
