refactor: 国际化完善

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -90,5 +90,29 @@
   "mi-ma-bu-neng-wei-kong": "Password cannot be empty.",
   "wei-jie-che": "Surveillance car.",
   "yong-hu-ming-bu-neng-wei-kong": "The username cannot be empty.",
-  "zhang-hao": "account"
+  "zhang-hao": "account",
+  "bei-zhu": "Note",
+  "chuang-jian-shi-jian": "Creation time",
+  "mo-ban-ming-cheng": "Template Name",
+  "chong-dian-ren-wu": "Charging task",
+  "dan-ci": "Single time",
+  "fan-hui-chong-dian-dian": "Return to charging point.",
+  "fan-hui-jie-guo": "Return result",
+  "fou": "No.",
+  "ji-qi-ren-bian-ma": "Robot coding",
+  "lu-jing-mo-ban": "Path Template",
+  "mei-tian": "Every day",
+  "mei-zhou": "every week",
+  "qing-xuan-ze": "Please select.",
+  "shi": "Yes",
+  "xia-fa-shi-jian": "Time of Issuance",
+  "xun-huan-shi-jian": "cycle time",
+  "xun-huan-tiao-jian": "Loop condition",
+  "zhou-er": "Tuesday",
+  "zhou-liu": "Saturday",
+  "zhou-ri": "Sunday",
+  "zhou-san": "Wednesday",
+  "zhou-si": "Thursday",
+  "zhou-wu": "Friday",
+  "zhou-yi": "Monday"
 }
