--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -90,5 +90,29 @@
   "mi-ma-bu-neng-wei-kong": "Le mot de passe ne peut pas être vide",
   "wei-jie-che": "Voiture de course hors-piste.",
   "yong-hu-ming-bu-neng-wei-kong": "Le nom d'utilisateur ne peut pas être vide.",
-  "zhang-hao": "compte"
+  "zhang-hao": "compte",
+  "bei-zhu": "Remarque",
+  "chuang-jian-shi-jian": "Date de création",
+  "mo-ban-ming-cheng": "Nom du modèle",
+  "chong-dian-ren-wu": "Mission de recharge",
+  "dan-ci": "Une seule fois",
+  "fan-hui-chong-dian-dian": "Retourner au point de charge",
+  "fan-hui-jie-guo": "Résultat de retour",
+  "fou": "Non",
+  "ji-qi-ren-bian-ma": "Codage du robot",
+  "lu-jing-mo-ban": "Modèle de chemin",
+  "mei-tian": "Chaque jour",
+  "mei-zhou": "chaque semaine",
+  "qing-xuan-ze": "Veuillez choisir",
+  "shi": "être",
+  "xia-fa-shi-jian": "Heure d'envoi",
+  "xun-huan-shi-jian": "Temps de boucle.",
+  "xun-huan-tiao-jian": "condition de boucle",
+  "zhou-er": "Mardi.",
+  "zhou-liu": "samedi",
+  "zhou-ri": "Dimanche",
+  "zhou-san": "Mercredi",
+  "zhou-si": "Jeudi",
+  "zhou-wu": "vendredi",
+  "zhou-yi": "Lundi"
 }
