--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -90,5 +90,29 @@
   "ji-zhu-mi-ma": "记住密码",
   "deng-lu": "登录",
   "yong-hu-ming-bu-neng-wei-kong": "用户名不能为空",
-  "mi-ma-bu-neng-wei-kong": "密码不能为空"
+  "mi-ma-bu-neng-wei-kong": "密码不能为空",
+  "mo-ban-ming-cheng": "模板名称",
+  "bei-zhu": "备注",
+  "chuang-jian-shi-jian": "创建时间",
+  "zhou-yi": "周一",
+  "zhou-er": "周二",
+  "zhou-san": "周三",
+  "zhou-si": "周四",
+  "zhou-wu": "周五",
+  "zhou-liu": "周六",
+  "zhou-ri": "周日",
+  "lu-jing-mo-ban": "路径模板",
+  "qing-xuan-ze": "请选择",
+  "xun-huan-tiao-jian": "循环条件",
+  "mei-tian": "每天",
+  "mei-zhou": "每周",
+  "dan-ci": "单次",
+  "xun-huan-shi-jian": "循环时间",
+  "xia-fa-shi-jian": "下发时间",
+  "fan-hui-chong-dian-dian": "返回充电点",
+  "shi": "是",
+  "fou": "否",
+  "ji-qi-ren-bian-ma": "机器人编码",
+  "chong-dian-ren-wu": "充电任务",
+  "fan-hui-jie-guo": "返回结果"
 }
