--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -122,5 +122,6 @@
   "wai-wang-duan-kou": "外网端口",
   "wai-wang-ip": "外网IP",
   "qing-xuan-ze-che-liang": "请选择车辆",
-  "ti-shi": "提示"
+  "ti-shi": "提示",
+  "wai-she-zhuang-tai-0": "外设状态"
 }
