--- a/docs/地图相关.md
+++ b/docs/地图相关.md
@@ -35,6 +35,62 @@ function initMap() {
 
 ## 地图托管服务
 
+### 开发
+
+相关代码在[码云](https://gitee.com/imrobotri/map-tile-hosting-service.git) 的 /packages/offline-map-server 和 /packages/offline-map-server-ui 目录下
+
+克隆代码后先下载依赖
+
+```shell
+pnpm install
+```
+
+/packages/offline-map-server 下的代码属于后端代码，需要掌握 nest.js 框架基础知识，或者查看注释
+
+/packages/offline-map-server-ui 下的代码属于上传地图压缩包时交互页面的前端代码
+
+首先进入到 offline-map-server-ui 目录进行打包
+
+```shell
+pnpm build-only
+```
+
+最终在 /packages/offline-map-server/ 目录下生成一个 client 目录
+
+然后进入到 offline-map-server 目录运行后端
+
+```shell
+pnpm start:dev
+```
+
+然后在浏览器输入 http://localhost:3000 即可访问前端页面，上传压缩包则会调用后端接口
+
+上传瓦片数据存放在 client 目录下的 tiles 目录
+
+### 部署
+
+建议使用 docker 部署，运行 docker 部署前要保证几点：
+
+- 终端在 offline-map-server 路径下
+- offline-map-server 路径下存在前端打包出来的 client 目录
+- offline-map-server 路径下存在后端打包出来的 dist 目录
+
+然后执行 docker 打包镜像命令
+
+```shell
+docker build -t map .
+```
+
+最后运行容器就可以在 http://localhost:3000 下访问（端口随意）
+
+```shell
+docker run -p 3000:3000 map
+```
+
+### 使用
+
 使用 docker 部署后在浏览器打开对应端口访问网页，点击上传压缩包选择需要加载的地图压缩包数据，支持点击预览和删除
 
-这样围界车就能顺利从地图托管服务中加载地图瓦片
+将围界车前端项目中请求带有 /tiles 接口代理到 3000 端口
+
+这样页面就能顺利从地图托管服务中加载地图瓦片
