--- a/docs/地图相关.md
+++ b/docs/地图相关.md
@@ -94,3 +94,5 @@ docker run -p 3000:3000 map
 将围界车前端项目中请求带有 /tiles 接口代理到 3000 端口
 
 这样页面就能顺利从地图托管服务中加载地图瓦片
+
+如果看到地图需要的一部分瓦片缺失，可以打开左下角的调试模式显示对应缺失瓦片的网格信息，然后需要到托管服务的页面中确认再重新打包上传
