feat: 实时更新车辆状态

--- a/docs/地图相关.md
+++ b/docs/地图相关.md
@@ -78,13 +78,24 @@ pnpm start:dev
 然后执行 docker 打包镜像命令
 
 ```shell
-docker build -t map .
+docker build -t <镜像名称> .
+```
+
+- 保存镜像文件
+```shell
+docker save -o <保存路径/文件名.tar> <镜像名称>
+```
+
+- 加载镜像文件
+
+```shell
+docker load -i <镜像文件路径/文件名.tar>
 ```
 
 最后运行容器就可以在 http://localhost:3000 下访问（端口随意）
 
 ```shell
-docker run -p 3000:3000 map
+docker run -p 3000:3000 <镜像名称>
 ```
 
 ### 使用
