feat: 国际化完善

--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -138,5 +138,8 @@
   "che-su": "车速",
   "ren-wu-lei-xing": "任务类型",
   "che-liang-su-du": "车辆速度",
-  "qing-she-zhi-che-liang-su-du": "请设置车辆速度"
+  "qing-she-zhi-che-liang-su-du": "请设置车辆速度",
+  "jin-guang-deng": "近光灯",
+  "yuan-guang-deng": "远光灯",
+  "zi-dong-yuan-guang-deng": "自动远光灯"
 }
