feat: 国际化完善

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -138,5 +138,13 @@
   "she-xiang-tou-zhuan-dong-jiao-du": "Camera rotation angle",
   "she-zhi-lu-duan-che-su": "Set road segment speed",
   "ting-liu-shi-jian-s": "Residence time/S",
-  "yi-jian-ding-wei": "One click positioning"
+  "yi-jian-ding-wei": "One click positioning",
+  "jin-guang-deng": "Low beam lights",
+  "yuan-guang-deng": "High beam",
+  "zi-dong-yuan-guang-deng": "automatic high beam",
+  "bao-cun-lu-xian": "save route",
+  "jie-shu-lu-zhi": "End recording",
+  "lu-zhi-lu-xian": "Record route",
+  "sou-suo-mo-ban": "Search template",
+  "xin-jian-lu-xian": "Create new route"
 }
