--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -138,5 +138,13 @@
   "she-xiang-tou-zhuan-dong-jiao-du": "Angle de rotation de la caméra",
   "she-zhi-lu-duan-che-su": "Définir la vitesse du segment de route",
   "ting-liu-shi-jian-s": "Temps de séjour/S",
-  "yi-jian-ding-wei": "Positionnement en un clic"
+  "yi-jian-ding-wei": "Positionnement en un clic",
+  "jin-guang-deng": "Feux de croisement",
+  "yuan-guang-deng": "Faisceau de route",
+  "zi-dong-yuan-guang-deng": "feux de route automatiques",
+  "bao-cun-lu-xian": "enregistrer l'itinéraire",
+  "jie-shu-lu-zhi": "Terminer l'enregistrement",
+  "lu-zhi-lu-xian": "Enregistrer l'itinéraire",
+  "sou-suo-mo-ban": "Modèle de recherche",
+  "xin-jian-lu-xian": "Créer un nouvel itinéraire"
 }
