--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -141,5 +141,10 @@
   "qing-she-zhi-che-liang-su-du": "请设置车辆速度",
   "jin-guang-deng": "近光灯",
   "yuan-guang-deng": "远光灯",
-  "zi-dong-yuan-guang-deng": "自动远光灯"
+  "zi-dong-yuan-guang-deng": "自动远光灯",
+  "xin-jian-lu-xian": "新建路线",
+  "bao-cun-lu-xian": "保存路线",
+  "sou-suo-mo-ban": "搜索模板",
+  "lu-zhi-lu-xian": "录制路线",
+  "jie-shu-lu-zhi": "结束录制"
 }
