feat(实时视频监控): 国际化完善

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -146,5 +146,6 @@
   "jie-shu-lu-zhi": "End recording",
   "lu-zhi-lu-xian": "Record route",
   "sou-suo-mo-ban": "Search template",
-  "xin-jian-lu-xian": "Create new route"
+  "xin-jian-lu-xian": "Create new route",
+  "shi-pin-qie-huan": "Video switching"
 }
