--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -146,5 +146,6 @@
   "jie-shu-lu-zhi": "Terminer l'enregistrement",
   "lu-zhi-lu-xian": "Enregistrer l'itinéraire",
   "sou-suo-mo-ban": "Modèle de recherche",
-  "xin-jian-lu-xian": "Créer un nouvel itinéraire"
+  "xin-jian-lu-xian": "Créer un nouvel itinéraire",
+  "shi-pin-qie-huan": "Commutation vidéo"
 }
