--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -146,5 +146,6 @@
   "bao-cun-lu-xian": "保存路线",
   "sou-suo-mo-ban": "搜索模板",
   "lu-zhi-lu-xian": "录制路线",
-  "jie-shu-lu-zhi": "结束录制"
+  "jie-shu-lu-zhi": "结束录制",
+  "shi-pin-qie-huan": "视频切换"
 }
