feat: 优化录制路线

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -147,5 +147,6 @@
   "lu-zhi-lu-xian": "Record route",
   "sou-suo-mo-ban": "Search template",
   "xin-jian-lu-xian": "Create new route",
-  "shi-pin-qie-huan": "Video switching"
+  "shi-pin-qie-huan": "Video switching",
+  "qing-xian-jie-shu-lu-zhi": "Please end recording first"
 }
