--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -147,5 +147,6 @@
   "lu-zhi-lu-xian": "Enregistrer l'itinéraire",
   "sou-suo-mo-ban": "Modèle de recherche",
   "xin-jian-lu-xian": "Créer un nouvel itinéraire",
-  "shi-pin-qie-huan": "Commutation vidéo"
+  "shi-pin-qie-huan": "Commutation vidéo",
+  "qing-xian-jie-shu-lu-zhi": "Veuillez d'abord terminer l'enregistrement"
 }
