--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -147,5 +147,6 @@
   "sou-suo-mo-ban": "搜索模板",
   "lu-zhi-lu-xian": "录制路线",
   "jie-shu-lu-zhi": "结束录制",
-  "shi-pin-qie-huan": "视频切换"
+  "shi-pin-qie-huan": "视频切换",
+  "qing-xian-jie-shu-lu-zhi": "请先结束录制"
 }
