feat: 国际化完善

--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -167,5 +167,8 @@
   "kai-shi-zhi-hang-fan-hang": "开始执行返航",
   "che-liang-fan-hang": "车辆返航",
   "lu-xian-hui-zhi": "路线绘制",
-  "xia-fa-ren-wu": "下发任务"
+  "xia-fa-ren-wu": "下发任务",
+  "yu-yan": "语言",
+  "li-shi": "历史",
+  "zhu-ti": "主题"
 }
