--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -167,5 +167,8 @@
   "xia-fa-ren-wu": "Issue tasks",
   "xin-jian-fan-hang-lu-xian": "Create a new return route",
   "xin-jian-ren-wu": "Create new task",
-  "yi-jie-shu-lu-zhi-qing-bao-cun-lu-xian": "Recording has ended, please save the route!"
+  "yi-jie-shu-lu-zhi-qing-bao-cun-lu-xian": "Recording has ended, please save the route!",
+  "yu-yan": "language",
+  "li-shi": "history",
+  "zhu-ti": "theme"
 }
