--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -167,5 +167,8 @@
   "xia-fa-ren-wu": "Tâches d'émission",
   "xin-jian-fan-hang-lu-xian": "Créer un nouvel itinéraire de retour",
   "xin-jian-ren-wu": "Créer une nouvelle tâche",
-  "yi-jie-shu-lu-zhi-qing-bao-cun-lu-xian": "L'enregistrement est terminé, veuillez sauvegarder l'itinéraire !"
+  "yi-jie-shu-lu-zhi-qing-bao-cun-lu-xian": "L'enregistrement est terminé, veuillez sauvegarder l'itinéraire !",
+  "li-shi": "histoire",
+  "yu-yan": "langue",
+  "zhu-ti": "thème"
 }
