--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -170,5 +170,16 @@
   "yi-jie-shu-lu-zhi-qing-bao-cun-lu-xian": "Recording has ended, please save the route!",
   "yu-yan": "language",
   "li-shi": "history",
-  "zhu-ti": "theme"
+  "zhu-ti": "theme",
+  "ji-qi-ren-code": "Robot code",
+  "lu-xian": "route",
+  "lu-xian-mo-ban": "route template",
+  "shi-pin": "video",
+  "xun-luo-ren-wu": "Patrol mission",
+  "ren-wu-ming-cheng": "mission name",
+  "ren-wu-zhuang-tai": "Task status",
+  "xun-luo-jie-shu-shi-jian": "Patrol end time",
+  "xun-luo-kai-shi-shi-jian": "Patrol start time",
+  "qing-kong-lu-xian": "clear route",
+  "xun-luo-lu-xian": "patrol route"
 }
