--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -170,5 +170,16 @@
   "yi-jie-shu-lu-zhi-qing-bao-cun-lu-xian": "L'enregistrement est terminé, veuillez sauvegarder l'itinéraire !",
   "li-shi": "histoire",
   "yu-yan": "langue",
-  "zhu-ti": "thème"
+  "zhu-ti": "thème",
+  "ji-qi-ren-code": "Code des robots",
+  "lu-xian": "itinéraire",
+  "lu-xian-mo-ban": "modèle d'itinéraire",
+  "shi-pin": "vidéo",
+  "xun-luo-ren-wu": "Mission de patrouille",
+  "ren-wu-ming-cheng": "nom de la mission",
+  "ren-wu-zhuang-tai": "Statut de la tâche",
+  "xun-luo-jie-shu-shi-jian": "Heure de fin de la patrouille",
+  "xun-luo-kai-shi-shi-jian": "Heure de début de la patrouille",
+  "qing-kong-lu-xian": "itinéraire dégagé",
+  "xun-luo-lu-xian": "itinéraire de patrouille"
 }
