feat: 国际化完善

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -133,7 +133,7 @@
   "qing-she-zhi-che-liang-su-du": "Please set vehicle speed",
   "qing-shu-ru-ting-liu-shi-jian-s": "Please enter the stay time/S",
   "qing-xuan-ze-she-xiang-tou-zhuan-dong-jiao-du": "Please select camera rotation angle",
-  "ren-wu-dian": "mission point",
+  "ren-wu-dian": "Mission point",
   "ren-wu-lei-xing": "Task type",
   "she-xiang-tou-zhuan-dong-jiao-du": "Camera rotation angle",
   "she-zhi-lu-duan-che-su": "Set road segment speed",
@@ -142,7 +142,7 @@
   "jin-guang-deng": "Low beam lights",
   "yuan-guang-deng": "High beam",
   "zi-dong-yuan-guang-deng": "automatic high beam",
-  "bao-cun-lu-xian": "save route",
+  "bao-cun-lu-xian": "Save route",
   "jie-shu-lu-zhi": "End recording",
   "lu-zhi-lu-xian": "Record route",
   "sou-suo-mo-ban": "Search template",
@@ -161,9 +161,9 @@
   "che-liang-fan-hang": "Vehicle return",
   "kai-shi-lu-zhi": "Start recording",
   "kai-shi-zhi-hang-fan-hang": "Start returning home",
-  "lu-xian-hui-zhi": "route drawing",
+  "lu-xian-hui-zhi": "Route drawing",
   "mo-ban-lie-biao": "Template list",
-  "ren-wu-lie-biao": "task list",
+  "ren-wu-lie-biao": "Task list",
   "xia-fa-ren-wu": "Issue tasks",
   "xin-jian-fan-hang-lu-xian": "Create a new return route",
   "xin-jian-ren-wu": "Create new task",
@@ -173,13 +173,19 @@
   "zhu-ti": "theme",
   "ji-qi-ren-code": "Robot code",
   "lu-xian": "route",
-  "lu-xian-mo-ban": "route template",
+  "lu-xian-mo-ban": "Route template",
   "shi-pin": "video",
   "xun-luo-ren-wu": "Patrol mission",
   "ren-wu-ming-cheng": "mission name",
   "ren-wu-zhuang-tai": "Task status",
   "xun-luo-jie-shu-shi-jian": "Patrol end time",
   "xun-luo-kai-shi-shi-jian": "Patrol start time",
-  "qing-kong-lu-xian": "clear route",
-  "xun-luo-lu-xian": "patrol route"
+  "qing-kong-lu-xian": "Clear route",
+  "xun-luo-lu-xian": "patrol route",
+  "wan-cheng": "Complete",
+  "wei-wan-cheng": "Incomplete",
+  "pu-tong-ren-wu": "Regular tasks",
+  "xin-zeng-ren-wu-dian": "Add task points",
+  "cha-xun": "query",
+  "zhong-zhi": "reset"
 }
