feat: 国际化完善

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -187,5 +187,6 @@
   "pu-tong-ren-wu": "Regular tasks",
   "xin-zeng-ren-wu-dian": "Add task points",
   "cha-xun": "query",
-  "zhong-zhi": "reset"
+  "zhong-zhi": "reset",
+  "cha-kan-geng-duo": "See more"
 }
