--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -187,5 +187,6 @@
   "pu-tong-ren-wu": "Tâches ordinaires",
   "xin-zeng-ren-wu-dian": "Ajouter un point de tâche",
   "cha-xun": "Enquête",
-  "zhong-zhi": "Réinitialisation"
+  "zhong-zhi": "Réinitialisation",
+  "cha-kan-geng-duo": "Voir plus"
 }
