--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -187,5 +187,6 @@
   "pu-tong-ren-wu": "普通任务",
   "xin-zeng-ren-wu-dian": "新增任务点",
   "cha-xun": "查询",
-  "zhong-zhi": "重置"
+  "zhong-zhi": "重置",
+  "cha-kan-geng-duo": "查看更多"
 }
